# opt_tkto

./: .gitignore  README.md  pyproject.toml  ruff.toml
configs/: llmjp_elyza.yaml  llmjp_elyza_medium.yaml  llmjp_elyza_raw.yaml  shisa_elyza_medium.yaml
scripts/: eval_scorer_posneg_gen.py  scorer_fold_resume.py  train_scorer_posneg.py  train_scorer_posneg_gen.py
src/: main.py
src/application/: __init__.py  data_creator.py  kto.py  ktto.py  tkto.py
src/application/interfaces/: __init__.py  completion_generator.py  dataset_repository.py  effect_predictor.py  message_generator.py  model_repository.py
src/domain/: __init__.py  completion.py  ktto_config.py  label.py  llmjp_completion.py  pcl_set.py  prompt.py  run_config.py  scorer_prompt.py  thought_prompt.py  tkto_config.py  training_result.py
src/domain/user_characteristics/: __init__.py  age_group.py  behavior_stage.py  gender.py
src/infrastructure/: __init__.py  harmony.py  qwen_thinking.py
src/infrastructure/analysis/: __init__.py  collect.py
src/infrastructure/llm/: __init__.py  client.py  generators.py  profile.py
src/infrastructure/repository/: __init__.py  dataset_repository_impl.py  effect_predictor_bert.py  effect_predictor_fake.py  effect_predictor_impl.py  effect_predictor_llm.py  message_generator_impl.py  model_repository_impl.py
src/infrastructure/services/: __init__.py  kto_trainer.py
