[project]
name = "ktto"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "takusan", email = "106806920+takuya-okada-01@users.noreply.github.com" }
]
dependencies = [
    "transformers>=4.47.1",
    "peft>=0.14.0",
    "trl>=0.13.0",
    "pandas>=2.2.3",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.8.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
