[project]
name = "ktto"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "takusan", email = "106806920+takuya-okada-01@users.noreply.github.com" }
]
dependencies = [
    "transformers>=4.47.1",
    "peft>=0.14.0",
    "trl>=0.13.0",
    "pandas>=2.2.3",
    "openai>=1.58.1",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "torchaudio>=2.5.1",
    "tensorboard>=2.18.0",
    "bitsandbytes>=0.45.0",
    "python-dotenv>=1.0.1",
    "tqdm>=4.67.1",
    "jsonschema>=4.23.0",
    "scikit-learn>=1.6.1",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.8.4",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.10.0",
    "openpyxl>=3.1.5",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
