[project]
name = "ktto"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "takusan", email = "106806920+takuya-okada-01@users.noreply.github.com" }
]
dependencies = [
    "transformers>=4.47.1",
    "peft>=0.14.0",
    "trl>=0.13.0",
    "pandas>=2.2.3",
    "openai>=1.58.1",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "torchaudio==2.6.0",
  # torch cu124 の実行時ライブラリ（未指定だと .so が欠けることがある）
    "nvidia-cudnn-cu12==9.1.0.70",
    "nvidia-nccl-cu12==2.21.5",
    "tensorboard>=2.18.0",
    "bitsandbytes>=0.45.0",
    "python-dotenv>=1.0.1",
    "tqdm>=4.67.1",
    "jsonschema>=4.23.0",
    "scikit-learn>=1.6.1",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.8.4",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.10.0",
    "openpyxl>=3.1.5",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

# CUDA 12.4 ドライバ向け（cu130 は本環境で GPU 未認識になる）
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }
